--- a/step.yml
+++ b/step.yml
@@ -1,12 +1,12 @@
 title: |-
-  Remote Gist Bash Script Runner
+  Gist Bash Script Runner
 summary: |
-  Downloads the content of the given Github Gist and runs it as a bash script.
+  Retrieves and runs bash scripts that are stored in a Gist
 description: |
-  Downloads the content of the given Github Gist and runs it as a bash script.
-website: https://github.com/jsauve/bitrise-step-remote-gist-bash-script-runner
-source_code_url: https://github.com/jsauve/bitrise-step-remote-gist-bash-script-runner
-support_url: https://github.com/jsauve/bitrise-step-remote-gist-bash-script-runner/issues
+  This step is for running bash scripts that are stored in a Gist. This is very similar to the remote bash script runner provided by the Bitrise team. However, this step differs in that it takes the root Gist URL, instwad of the "raw" Gist URL. The step automatically extracts the raw URL from the content located at the root Gist URL. Additionally, because Gists can contain multiple files, this step will retrieve the contents of _every_ file in the Gist and attempt to run them as bash scripts.
+website: https://github.com/jsauve/gist-bash-script-runner
+source_code_url: https://github.com/jsauve/gist-bash-script-runner
+support_url: https://github.com/jsauve/gist-bash-script-runner/issues
 host_os_tags:
   - osx-10.9
   - osx-10.10
